# pictmodoki

./: .editorconfig  .gitignore  LICENSE.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
client/: .eslintrc.js  index.html  package.json  tsconfig.json  webpack.config.js
client/public/: user_generated
client/src/: app.ts  audio-player.ts  bindable.ts  canvas-proxy.ts  color-history.ts  command-sender.ts  common.ts  event-sender.ts  image-canvas-drawer-with-preview.ts  index.html.ejs  input-manager.ts  layer-manager.ts  main.ts  paint-app.ts  paint-tool.ts  tool-manager.ts  typed-event.ts  user-manager.ts  virtual-event-manager.ts  web-socket-api.ts
client/src/common/: image-canvas-event.ts  image-canvas.ts  index.ts  primitives.ts  user.ts
client/src/components/color-picker/: color-bar-script.ts  color-bar.vue  color-code-box-script.ts  color-code-box.vue  color-preview-script.ts  color-preview.vue  color.ts  index-script.ts  index.vue
client/src/components/slider/: index-script.ts  index.vue  slider-scaler.ts
client/src/views/: color-picker-test.vue  home-script.ts  home.vue  index.vue  room-script.ts  room.vue
client/src/views/chatbox/: index-script.ts  index.vue
common/: package.json  tsconfig.json  webpack.config.js
common/src/: canvas-proxy.ts  command.ts  event.ts  game-state.ts  image-canvas-command.ts  image-canvas-event.ts  image-canvas.ts  index.ts  layer.ts  user.ts  utils.ts
common/src/image-canvas/: command-validator.ts  command.ts  event-executor.ts  event-manager.ts  event-revoker.ts  event.ts  image-canvas.ts  index.ts  layer.ts  virtual-event-manager.ts
encoder/: .gitignore  CMakeLists.txt  index.d.ts  package.json
encoder/js_src/: index.js  test.js
encoder/src/: encoder.cpp  encoder.hpp  encoder_wrapper.cpp  main.cpp
encoder/test/: index.js
server/: .eslintrc.js  .gitignore  package.json  tsconfig.json  webpack.config.js
server/src/: app.ts  canvas-proxy.ts  command-interpreter.ts  drawing-recorder.ts  game.ts  main.ts  room.ts  user.ts
